# PTRF

./: README.md
RF/: CMakeLists.txt  CSP.cpp  CSP.h  PrivateTrain.cpp  SP.cpp  SP.h  main.cpp  main2.cpp  sub_protocol_test.cpp  sub_protocol_test.h  util.h  wdbc.data
RF/Paillier/: Paillier.cpp
RF/PrivateRandomForest/: PrivateNode.cpp  PrivateNode.h  PrivateRandomForest.cpp  PrivateRandomForest.h  PrivateTree.cpp  PrivateTree.h
RF/RandomForest/: Node.cpp  Node.h  RandomForest.cpp  RandomForest.h  ReadForest.h  ReadTestSample.h  Tree.cpp  Tree.h
RF/Touch/data/: data_40_test.csv  data_40_train.csv  data_60_test.csv  data_60_train.csv  data_80_test.csv  data_80_train.csv
RF/Touch/private_tree/: tree_40_1.txt  tree_40_10.txt  tree_40_20.txt  tree_40_50.txt  tree_60_1.txt  tree_60_10.txt  tree_60_20.txt  tree_60_50.txt  tree_80_1.txt  tree_80_10.txt  tree_80_20.txt  tree_80_50.txt  tree_model_40_1.txt  tree_model_40_10.txt  tree_model_40_20.txt  tree_model_40_50.txt  tree_model_60_1.txt  tree_model_60_10.txt  tree_model_60_20.txt  tree_model_60_50.txt  tree_model_80_1.txt  tree_model_80_10.txt  tree_model_80_20.txt  tree_model_80_50.txt
RF/Touch/tree/: tree_40_1.txt  tree_40_10.txt  tree_40_20.txt  tree_40_50.txt  tree_60_1.txt  tree_60_10.txt  tree_60_20.txt  tree_60_50.txt  tree_80_10.txt  tree_80_20.txt  tree_80_50.txt  tree_model_40.txt  tree_model_40_1.txt  tree_model_40_10.txt  tree_model_40_20.txt  tree_model_40_50.txt  tree_model_60_1.txt  tree_model_60_10.txt  tree_model_60_20.txt  tree_model_60_50.txt  tree_model_80_1.txt  tree_model_80_10.txt  tree_model_80_20.txt  tree_model_80_50.txt
RF/Touch/tree1/: tree_40_10.txt  tree_40_20.txt  tree_40_50.txt  tree_60_10.txt  tree_60_20.txt  tree_60_50.txt  tree_80_1.txt  tree_80_10.txt  tree_80_20.txt  tree_80_50.txt  tree_model_40_10.txt  tree_model_40_20.txt  tree_model_40_50.txt  tree_model_60_10.txt  tree_model_60_20.txt  tree_model_60_50.txt  tree_model_80_10.txt  tree_model_80_20.txt  tree_model_80_50.txt
RF/UCL/: breast_test.csv  spambase_test.csv
RF/UCL/tree1/: tree_breast.txt  tree_breast_model.txt  tree_spambase.txt  tree_spambase_model.txt
RF/UserBehavior/: touchPoint.cpp  touchPoint.h
RF/emp-sh2pc/: alice_gen.cpp  alice_gen.h  alice_sort.h  semihonest.h  semihonest_eva.h  semihonest_gen.h
RF_CSP/: .CSP.cpp.swp  CMakeLists.txt  CSP.cpp  CSP.h  PrivateTrain.cpp  main.cpp  main2.cpp  sub_test.cpp  sub_test.h  test.cpp
RF_CSP/Paillier/: Paillier.cpp  Paillier.h
RF_CSP/emp-ot/: ot_extension.h
RF_CSP/emp-sh2pc/: bob_eva.cpp  bob_eva.h  semihonest.h  semihonest_eva.h
